<resources>
  <string name="app_name">TaskApp</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>

  <!-- Status Task -->
  <string name="status_task_todo">A Fazer</string>
  <string name="status_task_doing">Fazendo</string>
  <string name="status_task_done">Feitas</string>

  <!-- Generics -->
  <string name="text_title_warning">Atenção</string>
  <string name="text_button_warning">Entendi</string>
  <string name="email_empty">Preencha seu e-mail</string>
  <string name="password_empty">Preencha sua senha</string>
  <string name="error_generic">Ocorreu um erro! Por favor tente novamente mais tarde!</string>
  <string name="text_list_task_empty">Nenhuma tarefa cadastrada.</string>
  <string name="text_load_list_task">Aguarde, estamos carregando as informações.</string>
  <string name="text_delete_success_task">Tarefas removida com sucesso.</string>
  <string name="text_dialog_confirm">Confirmar</string>
  <string name="text_title_dialog_delete">Deseja remover esta tarefa?</string>
  <string name="text_message_dialog_delete">Aperte em confirmar para remover a tarefa</string>
  <string name="text_title_toolbar">Editar tarefa</string>

  <!-- Register Fragment -->
  <string name="email_empty_register_fragment">Preencha um e-mail válido</string>
  <string name="password_empty_register_fragment">Preencha uma senha</string>

  <!-- Form Stack Fragment -->
  <string name="description_empty_form_task_fragment">Preencha uma descrição</string>
  <string name="labelTextView">E-mail</string>
  <string name="labelTextViewPass">Senha</string>
  <string name="editTextPassLogin">Digite sua senha</string>
  <string name="textBtnLogin">Entrar</string>
  <string name="recuperar_conta">Recuperar conta</string>
  <string name="criar_conta">Criar conta</string>
  <string name="sair_do_aplicativo">Sair do aplicativo</string>
  <string name="nova_tarefa">Nova tarefa</string>
  <string name="descricao">Descrição</string>
  <string name="criar_nova_tela_de_login_do_app">Criar nova tela de login do app</string>
  <string name="status">Status</string>
  <string name="a_fazer">A Fazer</string>
  <string name="fazendo">Fazendo</string>
  <string name="feita">Feita</string>
  <string name="salvar">Salvar</string>
  <string name="save_success_task_fragment">Tarefa salva com sucesso.</string>
  <string name="save_update_task_fragment">Tarefa editada com sucesso.</string>
  <string name="text_current_info_recover_account">Informe seu e-mail de cadastro para receber um link para alteração da senha.</string>

  <!-- Home Fragment -->
  <string name="text_title_dialog_confirm_logout">Deseja sair da sua conta?</string>
  <string name="text_button_dialog_confirm_logout">Confirmar</string>
  <string name="text_message_dialog_confirm_logout">Aperte em confirmar para sair da sua conta.</string>

  <string name="text_message_recover_account_fragment">Pronto, acabamos de enviar um link para o seu e-mail.</string>

  <!-- erros firebase authentication -->
  <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail</string>
  <string name="invalid_email_register_fragment">Insira um e-mail válido</string>
  <string name="invalid_password_register_fragment">Senha inválida, tente novamente</string>
  <string name="email_in_use_register_fragment">Este e-mail já está em uso</string>
  <string name="strong_password_register_fragment">Insira uma senha forte</string>


</resources>